feat: draggable test

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,12 @@ html, body {
 body {
     margin: 0;
 }
+
+.sortable-drag {
+    opacity: 1;
+    color: blue;
+}
+
+.sortable-chosen {
+    color: red;
+}
