--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,11 +6,11 @@ body {
     margin: 0;
 }
 
-.sortable-drag {
-    opacity: 1;
-    color: blue;
-}
+// .sortable-drag {
+//     opacity: 1;
+//     color: blue;
+// }
 
-.sortable-chosen {
-    color: red;
-}
+// .sortable-chosen {
+//     color: red;
+// }
