--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,12 @@ body {
     margin: 0;
 }
 
+ul {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+}
+
 // .sortable-drag {
 //     opacity: 1;
 //     color: blue;
